<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/ivLogoRegistro"
        android:layout_gravity="center_horizontal"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tvUsuarioRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="10dp"
        android:text="@string/user" />

    <EditText
        android:id="@+id/etUsuarioRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:ems="10"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/tvEmailRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/etEmailRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tvPasswordRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/etPasswordRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btRegistroRegistro"
        style="@style/estiloBotones"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up" />

    <Button
        android:id="@+id/btLoginLogin"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_below="@+id/etPasswordLogin"
        android:layout_alignLeft="@+id/etEmailLogin"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="17dp"
        android:text="@string/login"
        android:visibility="invisible" />
</LinearLayout>